--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draggable-tab": "^0.10.1",
+    "react-draggable-tabs": "^1.0.8",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
